<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal"
    android:background="#3949AB"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:elevation="8dp">

    <ImageButton
        android:id="@+id/navCart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_cart"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/cart_icon"
        app:tint="@color/colorOnSecondary" />

    <ImageButton
        android:id="@+id/navWishlist"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_wishlist"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/heart_icon"
        app:tint="@color/colorOnSecondary" />

    <ImageButton
        android:id="@+id/navHome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_home"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/home_icon"
        app:tint="@android:color/white" />

    <ImageButton
        android:id="@+id/navChat"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_hat"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/message_icon"
        app:tint="@color/colorOnSecondary" />

    <ImageButton
        android:id="@+id/navProfile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_profile"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/profile_icon"
        app:tint="@android:color/white" />

</LinearLayout>
